package de.likeherotozero;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class LikeHeroToZeroApplication {

    public static void main(String[] args) {
        SpringApplication.run(LikeHeroToZeroApplication.class, args);
    }

}
